# drum-glove-stm32

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix  stm32g431kb.ld
include/: stm32g431xx.h  stm32g4xx.h  system_stm32g4xx.h
kicad/: drum-glove-stm32.kicad_prl  drum-glove-stm32.kicad_pro  drum-glove-stm32.kicad_sch
res/: convert.sh  samples.cpp  samples.cppe  samples.hpp
src/: ADCController.cpp  ADCController.hpp  AudioController.cpp  AudioController.hpp  DrumMachine.cpp  DrumMachine.hpp  GlobalConstants.hpp  Gpio.cpp  Gpio.hpp  InterruptHandlers.cpp  InterruptHandlers.hpp  Interrupts.cpp  Interrupts.hpp  Main.cpp  StatusIndicator.cpp  StatusIndicator.hpp  TapDetector.cpp  TapDetector.hpp  Timer.cpp  Timer.hpp  Util.cpp  Util.hpp  adc.cpp  adc.hpp  dac.cpp  dac.hpp  drum_machine.cpp  drum_machine.hpp  error_indicator.hpp  global_constants.hpp  interrupts.cpp  interrupts.hpp  io.cpp  io.hpp  main.cpp  mcu.hpp  startup.S  status_indicator.cpp  status_indicator.hpp  timer.cpp  (+4 more)
